# gemini-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
gemini_mcp/: __init__.py  core.py  research.py  server.py
tests/: conftest.py  test_core.py  test_integration.py  test_server.py
